impl(PROTO): Implementando el pipeline del protocolo.